...
        child: Form(
          key: _key,
          child: Column(
            children: [
              TextFormField(
                controller: _emailController,
                key: const ValueKey('email_id'),
                decoration: const InputDecoration(hintText: 'Enter Email Id'),
                validator: (value) => Validator.validateEmail(value ?? ''),
              ),
              TextFormField(
                controller: _passwordController,
                key: const ValueKey('password'),
                decoration: const InputDecoration(hintText: 'Enter Password'),
                validator: (value) => Validator.validatePassword(value ?? ''),
              ),
              const SizedBox(height: 20),
              ElevatedButton(
                onPressed: () {
...
